# xivuniversalis

./: README.rst  pyproject.toml
.github/workflows/: python-app.yml
docs/: requirements.txt
tests/: test_datacenters.py  test_item_listings.py  test_listings.py  test_market_data.py  test_marketable.py  test_sale_history.py  test_tax_rates.py  test_worlds.py
xivuniversalis/: client.py  decorators.py  errors.py  models.py
