[tool.ruff]
line-length = 119

[project]
name = "universalis"
version = "0.1.0a1"
description = "An unofficial asynchronous Python library for the Universalis API."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.14",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
